--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 /* Aplica un fondo y color general */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4; /* Fondo gris claro */
+  background-color: #3dcf96; /* Fondo gris claro */
   color: #333; /* Texto de color oscuro */
   margin: 0;
   padding: 0;
